--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
+    <link rel="shortcut icon" href="./img/disc-fill.svg" type="image/x-icon">
     <title>kottPlay</title>
 </head>
 <body>
     <div class="navbar navbar-expand-lg">
         <div class="container-fluid d-flex px-3">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="d-none navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="ri-menu-line text-white"></i>
             </button>
             <div class="row row-cols-lg-3 justify-content-between w-100">
@@ -34,7 +35,7 @@
                     <label for="music-search"><img src="./img/search-icon.svg" alt="search music" class="img-fluid"></label>
                     <input type="text" name="music-earch" id="music-search" class="bg-transparent border-0 w-100 mx-2" placeholder="Search for artist, albulm and best collection" style="background: #6F767E;">
                 </div>
-                <div class="col text-end">
+                <div class="col-auto col-lg-4 text-end">
                     <img src="./img/download-icon.svg" alt="download" class="img-fluid" role="button">
                     <img src="./img/user.svg" alt="user" class="img-fluid rounded-circle" role="button">
                 </div>
@@ -43,37 +44,48 @@
     </div>
     <div class="container-fluid text-white p-4" style="background: #171717; height: 40vh;">
         <h6>Home / <span style="color: #0BD3FF;">Dream Vacation</span></h6>
-        <div class="row">
+        <div class="row align-items-center">
             <div class="col-auto">
-                <img src="./img/artisst.svg" alt="artist" class="img-fluid" style="height:28vh">
+                <img src="./img/cover.jpg" alt="artist" class="img-fluid" style="height:28vh">
             </div>
             <div class="col">
                 <div class="row row-cols-1">
-                    <div class="col px-0">Rap De Music - 2022 - 7 songs</div>
-                    <div class="col px-0 fw-bolder" style="font-size: 3.5em;">Dream Vacation</div>
-                    <div class="col">
+                    <div class="col px-0">Jhonny Drille - 2022 - 7 songs</div>
+                    <div class="col px-0 fw-bolder d-none d-lg-block" style="font-size: 3.5em;">Before We Fall Asleep</div>
+                    <div class="col px-0 fw-bolder d-lg-none" style="font-size: 1em;">Before We Fall Asleep</div>
+                    <div class="col d-none d-lg-block">
                         <div class="row">
                             <div class="col-auto border border-white rounded-2 d-flex align-items-center"><img src="./img/music note.svg" alt="music-note" class="img-fluid me-2"> Listened: 500k</div>
-                            <div class="col-auto bg-white text-dark rounded-2 d-flex align-items-center mx-3"><img src="./img/download-icon.svg" alt="download" class="img-fluid me-2">Download Albulm</div>
-                            <div class="col-auto p-0"><img src="./img/like icon.svg" alt="favourite" class="img-fluid"></div>
+                            <div class="col-auto bg-white text-dark rounded-2 d-flex align-items-center mx-3"><img src="./img/download-icon.svg" alt="download" class="img-fluid me-2" role="button">Download Albulm</div>
+                            <div class="col-auto p-0" role="button"><img src="./img/like icon.svg" alt="favourite" class="img-fluid"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid" id="songs-el">
-
+    <div class="container-fluid text-white px-4" style="height: 30vh;">
+        <table class="table table-borderless table-fixed text-white">
+            <thead class="border-bottom border-light position-sticky">
+                <tr>
+                    <th scope="col" class="text-uppercase col-6">Title</th>
+                    <th scope="col" class="text-uppercase col-6">Artist</th>
+                </tr>
+            </thead>
+            <tbody id="songs-el" style="height: 24vh;">
+                
+            </tbody>
+        </table>
     </div>
-    <div class="container-fluid px-4 position-fixed bottom-0 px-4 py-2 text-white" style="background: #171717; height: 14vh;">
-        <div class="row row-cols-3 justify-content-between">
+    <div class="container-fluid px-4 position-fixed bottom-0 px-4 py-2 text-white" style="background: #171717; height: 16vh;">
+        <div class="row row-cols-3 justify-content-between align-items-center">
             <div class="col-4">
                 <div class="row">
-                    <div class="col-auto"><img src="./img//artist_1.svg" alt="" class="img-fluid"></div>
+                    <div class="col-auto"><img src="" alt="" class="img-fluid" style="height: 4.5em;" id="track-img"></div>
                     <div class="col">
-                        <div class="row row-cols-1">
-                            <div class="col px-0 fw-bold" id="track-name">Free as the wind</div>
-                            <div class="col px-0 fw-bolder" id="track-artist">Starr Boy | Light As The Air</div>
+                        <div class="row row-cols-1 d-none d-lg-block">
+                            <div class="col px-0 fw-bold" id="track-name"></div>
+                            <div class="col px-0 fw-bolder" id="track-artist"></div>
                             <div class="col">
                                 <div class="row">
                                     <div class="col-auto px-0"><img src="./img/live-icon.svg" alt="live-icon" class="img-fluid me-2"></div>
@@ -84,29 +96,29 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 text-center d-flex align-items-center">
-                1:55 <input type="range" name="duration" id="duration-el" min="0" max="100" class="w-100 mx-2"> 4:22
+            <div class="col-4 text-center d-none d-lg-flex align-items-center">
+                <span id="current-time">0:00</span> <input type="range" name="duration" id="seek-slider" min="0" max="100" class="w-100 mx-2" value="0"> <span id="total-duration">4:22</span>
             </div>
-            <div class="col-4 d-flex align-items-center justify-content-end">
+            <div class="col-8 col-lg-4 d-flex align-items-center justify-content-end">
                 <div class="row">
                     <div class="col-auto">
                         <img src="./img/shuffle-icon.svg" alt="shuffle" class="img-fluid" role="button" id="shuffle-btn">
                         <img src="./img/prev-icon.svg" alt="next" class="img-fluid" role="button" id="prev-btn">
-                        <img src="./img/play-icon.svg" alt="play" class="img-fluid" role="button" id="play-btn">
+                        <img src="./img/play-icon.svg" alt="play" class="img-fluid" role="button" id="play-btn" style="width: 28px;">
                         <img src="./img/next-icon.svg" alt="next" class="img-fluid" role="button" id="next-btn">
-                        <img src="./img/repeat-icon.svg" alt="repeat" class="img-fluid" role="button" id="repeat-btn">
+                        <img src="./img/repeat-icon.svg" alt="repeat" class="img-fluid" role="button" id="repeat-btn" style="width: 27px;">
                     </div>
-                    <div class="col-5">
+                    <div class="col-5 d-none">
                         <div class="row align-items-center">
-                            <div class="col-2 px-0"><label for="volume"><img src="./img/volume-icon.svg" alt="volume" class="img-fluid"></label></div>
-                            <div class="col-6 px-0 mx-2 d-flex align-items-center"><input type="range" name="volumee" id="volume" min="0" max="100"></div>
+                            <div class="col-2 px-0"><label for="volume"><img src="./img/volume-icon.svg" alt="volume" class="img-fluid" id="volume-icon"></label></div>
+                            <div class="col-6 px-0 mx-2 d-flex align-items-center"><input type="range" name="volume" id="volume" min="0" max="100" value="50"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- <script src="https://sdk.scdn.co/spotify-player.js"></script> -->
+    <script src="https://genius.codes"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./main.js"></script>
 </body>
