--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <div class="navbar navbar-expand-lg">
-        <div class="container-fluid d-flex px-3">
-            <button class="d-none navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container-fluid d-flex px-3 justify-content-center">
+            <!-- <button class="d-none navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="ri-menu-line text-white"></i>
-            </button>
-            <div class="row row-cols-lg-3 justify-content-between w-100">
+            </button> -->
+            <div class="row row-cols-lg-3 justify-content-around w-100">
                 <div class="col collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
@@ -31,7 +31,7 @@
                       </li>
                     </ul>
                 </div>
-                <div class="col rounded-pill d-flex align-items-center" style="background: #171717;">
+                <div class="col-7 col-lg-4 rounded-pill d-flex align-items-center" style="background: #171717;">
                     <label for="music-search"><img src="./img/search-icon.svg" alt="search music" class="img-fluid"></label>
                     <input type="text" name="music-earch" id="music-search" class="bg-transparent border-0 w-100 mx-2" placeholder="Search for artist, albulm and best collection" style="background: #6F767E;">
                 </div>
@@ -79,12 +79,12 @@
     </div>
     <div class="container-fluid px-4 position-fixed bottom-0 px-4 py-2 text-white" style="background: #171717; height: 16vh;">
         <div class="row row-cols-3 justify-content-between align-items-center">
-            <div class="col-4">
+            <div class="col-4 col-lg-4">
                 <div class="row">
                     <div class="col-auto"><img src="" alt="" class="img-fluid" style="height: 4.5em;" id="track-img"></div>
-                    <div class="col">
-                        <div class="row row-cols-1 d-none d-lg-block">
-                            <div class="col px-0 fw-bold" id="track-name"></div>
+                    <div class="col d-none d-lg-block">
+                        <div class="row row-cols-1">
+                            <div class="col px-0 fw-bold track-name" id="track-name"></div>
                             <div class="col px-0 fw-bolder" id="track-artist"></div>
                             <div class="col">
                                 <div class="row">
@@ -101,14 +101,15 @@
             </div>
             <div class="col-8 col-lg-4 d-flex align-items-center justify-content-end">
                 <div class="row">
-                    <div class="col-auto">
+                    <div class="col px-2 fw-bold track-name d-lg-none"></div>
+                    <div class="col-auto px-2">
                         <img src="./img/shuffle-icon.svg" alt="shuffle" class="img-fluid" role="button" id="shuffle-btn">
                         <img src="./img/prev-icon.svg" alt="next" class="img-fluid" role="button" id="prev-btn">
                         <img src="./img/play-icon.svg" alt="play" class="img-fluid" role="button" id="play-btn" style="width: 28px;">
                         <img src="./img/next-icon.svg" alt="next" class="img-fluid" role="button" id="next-btn">
                         <img src="./img/repeat-icon.svg" alt="repeat" class="img-fluid" role="button" id="repeat-btn" style="width: 27px;">
                     </div>
-                    <div class="col-5 d-none">
+                    <div class="col-5 d-none d-lg-block">
                         <div class="row align-items-center">
                             <div class="col-2 px-0"><label for="volume"><img src="./img/volume-icon.svg" alt="volume" class="img-fluid" id="volume-icon"></label></div>
                             <div class="col-6 px-0 mx-2 d-flex align-items-center"><input type="range" name="volume" id="volume" min="0" max="100" value="50"></div>
