--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
     </div>
     <div class="container-fluid text-white p-4" style="background: #171717; height: 40vh;">
         <h6>Home / <span style="color: #0BD3FF;">Dream Vacation</span></h6>
-        <div class="row align-items-center">
-            <div class="col-auto">
-                <img src="./img/cover.jpg" alt="artist" class="img-fluid" style="height:28vh">
+        <div class="row row-cols-1 row-cols-lg-2 align-items-center">
+            <div class="col-6 col-lg-auto">
+                <img src="./img/cover.jpg" alt="artist" class="img-fluid" style="width:28vh; object-fit: cover;">
             </div>
-            <div class="col">
+            <div class="col px-4 px-lg-auto mt-4 mt-lg-0">
                 <div class="row row-cols-1">
                     <div class="col px-0">Jhonny Drille - 2022 - 7 songs</div>
-                    <div class="col px-0 fw-bolder d-none d-lg-block" style="font-size: 3.5em;">Before We Fall Asleep</div>
-                    <div class="col px-0 fw-bolder d-lg-none" style="font-size: 1em;">Before We Fall Asleep</div>
+                    <div class="col px-0 fw-bolder d-none d-lg-block" style="font-size: 2.5em;">Before We Fall Asleep</div>
+                    <div class="col px-0 fw-bolder d-lg-none" style="font-size: 2em;">Before We Fall Asleep</div>
                     <div class="col d-none d-lg-block">
                         <div class="row">
                             <div class="col-auto border border-white rounded-2 d-flex align-items-center"><img src="./img/music note.svg" alt="music-note" class="img-fluid me-2"> Listened: 500k</div>
@@ -72,13 +72,13 @@
                     <th scope="col" class="text-uppercase col-6">Artist</th>
                 </tr>
             </thead>
-            <tbody id="songs-el" style="height: 24vh;">
+            <tbody id="songs-el" style="height: 27.5vh;">
                 
             </tbody>
         </table>
     </div>
-    <div class="container-fluid px-4 position-fixed bottom-0 px-4 py-2 text-white" style="background: #171717; height: 16vh;">
-        <div class="row row-cols-3 justify-content-between align-items-center">
+    <div class="container-fluid px-4 position-fixed bottom-0 px-4 py-2 text-white d-flex align-items-center w-100" style="background: #171717; height: 16vh;">
+        <div class="row row-cols-3 justify-content-between align-items-center w-100">
             <div class="col-4 col-lg-4">
                 <div class="row">
                     <div class="col-auto"><img src="" alt="" class="img-fluid" style="height: 4.5em;" id="track-img"></div>
@@ -100,7 +100,7 @@
                 <span id="current-time">0:00</span> <input type="range" name="duration" id="seek-slider" min="0" max="100" class="w-100 mx-2" value="0"> <span id="total-duration">4:22</span>
             </div>
             <div class="col-8 col-lg-4 d-flex align-items-center justify-content-end">
-                <div class="row">
+                <div class="row row-cols-1 row-cols-lg-2">
                     <div class="col px-2 fw-bold track-name d-lg-none"></div>
                     <div class="col-auto px-2">
                         <img src="./img/shuffle-icon.svg" alt="shuffle" class="img-fluid" role="button" id="shuffle-btn">
