--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-7 col-lg-4 rounded-pill d-flex align-items-center" style="background: #171717;">
                     <label for="music-search"><img src="./img/search-icon.svg" alt="search music" class="img-fluid"></label>
-                    <input type="text" name="music-earch" id="music-search" class="bg-transparent border-0 w-100 mx-2" placeholder="Search for artist, albulm and best collection" style="background: #6F767E;">
+                    <input type="text" name="music-earch" id="music-search" class="bg-transparent border-0 w-100 mx-2" placeholder="Search for artist, album and best collection" style="background: #6F767E;">
                 </div>
                 <div class="col-auto col-lg-4 text-end">
                     <img src="./img/download-icon.svg" alt="download" class="img-fluid" role="button">
@@ -43,14 +43,14 @@
         </div>
     </div>
     <div class="container-fluid text-white p-4" style="background: #171717; height: 40vh;">
-        <h6>Home / <span style="color: #0BD3FF;">Dream Vacation</span></h6>
+        <h6>Home / <span style="color: #0BD3FF;">Before We Fall Asleep</span></h6>
         <div class="row row-cols-1 row-cols-lg-2 align-items-center">
             <div class="col-6 col-lg-auto">
                 <img src="./img/cover.jpg" alt="artist" class="img-fluid" style="width:28vh; object-fit: cover;">
             </div>
             <div class="col px-4 px-lg-auto mt-4 mt-lg-0">
                 <div class="row row-cols-1">
-                    <div class="col px-0">Jhonny Drille - 2022 - 7 songs</div>
+                    <div class="col px-0">Johnny Drille - 2022 - 7 songs</div>
                     <div class="col px-0 fw-bolder d-none d-lg-block" style="font-size: 2.5em;">Before We Fall Asleep</div>
                     <div class="col px-0 fw-bolder d-lg-none" style="font-size: 2em;">Before We Fall Asleep</div>
                     <div class="col d-none d-lg-block">
