--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://malsup.github.io/jquery.blockUI.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.66.0-2013.10.09/jquery.blockUI.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
     <link rel="shortcut icon" href="./img/disc-fill.svg" type="image/x-icon">
     <title>kottPlay</title>
 </head>
 <body>
-    <div class="navbar navbar-expand-lg">
+    <div class="navbar navbar-expand-lg" style="height: 12vh;">
         <div class="container-fluid d-flex px-3 justify-content-center">
-            <!-- <button class="d-none navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="ri-menu-line text-white"></i>
-            </button> -->
             <div class="row row-cols-lg-3 justify-content-around w-100">
                 <div class="col collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -42,18 +43,21 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid text-white p-4" style="background: #171717; height: 40vh;">
+    <div class="container-fluid text-white p-4 d-flex flex-column justify-content-center" style="background: #171717; height: 40vh;">
         <h6>Home / <span style="color: #0BD3FF;">Before We Fall Asleep</span></h6>
-        <div class="row row-cols-1 row-cols-lg-2 align-items-center">
-            <div class="col-6 col-lg-auto">
+        <div class="row row-cols-1 row-cols-md-2 align-items-center">
+            <div class="col-auto d-none d-md-block">
                 <img src="./img/cover.jpg" alt="artist" class="img-fluid" style="width:28vh; object-fit: cover;">
             </div>
-            <div class="col px-4 px-lg-auto mt-4 mt-lg-0">
+            <div class="col-auto col-md-auto d-md-none">
+                <img src="./img/cover.jpg" alt="artist" class="img-fluid" style="width:17vh; object-fit: cover;">
+            </div>
+            <div class="col-auto col-md-7 px-4 px-md-auto mt-4 mt-md-0">
                 <div class="row row-cols-1">
                     <div class="col px-0">Johnny Drille - 2022 - 7 songs</div>
-                    <div class="col px-0 fw-bolder d-none d-lg-block" style="font-size: 2.5em;">Before We Fall Asleep</div>
-                    <div class="col px-0 fw-bolder d-lg-none" style="font-size: 2em;">Before We Fall Asleep</div>
-                    <div class="col d-none d-lg-block">
+                    <div class="col px-0 fw-bolder d-none d-md-block" style="font-size: 2.5em;">Before We Fall Asleep</div>
+                    <div class="col px-0 fw-bolder d-md-none" style="font-size: 1.5em;">Before We Fall Asleep</div>
+                    <div class="col d-none d-md-block">
                         <div class="row">
                             <div class="col-auto border border-white rounded-2 d-flex align-items-center"><img src="./img/music note.svg" alt="music-note" class="img-fluid me-2"> Listened: 500k</div>
                             <div class="col-auto bg-white text-dark rounded-2 d-flex align-items-center mx-3"><img src="./img/download-icon.svg" alt="download" class="img-fluid me-2" role="button">Download Albulm</div>
@@ -64,22 +68,22 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid text-white px-4" style="height: 30vh;">
+    <div class="container-fluid text-white px-4" style="height: 33vh;">
         <table class="table table-borderless table-fixed text-white">
-            <thead class="border-bottom border-light position-sticky">
+            <thead class="border-bottom border-light position-sticky" style="height: 6vh;">
                 <tr>
                     <th scope="col" class="text-uppercase col-6">Title</th>
                     <th scope="col" class="text-uppercase col-6">Artist</th>
                 </tr>
             </thead>
-            <tbody id="songs-el" style="height: 27.5vh;">
+            <tbody id="songs-el" style="height: 27vh;">
                 
             </tbody>
         </table>
     </div>
-    <div class="container-fluid px-4 position-fixed bottom-0 px-4 py-2 text-white d-flex align-items-center w-100" style="background: #171717; height: 16vh;">
-        <div class="row row-cols-3 justify-content-between align-items-center w-100">
-            <div class="col-4 col-lg-4">
+    <div class="container-fluid px-4 position-fixed bottom-0 px-4 py-2 text-white d-flex align-items-center w-100" style="background: #171717; height: 15vh;">
+        <div class="row row-cols-3 align-items-center w-100">
+            <div class="col-auto col-lg-4">
                 <div class="row">
                     <div class="col-auto"><img src="" alt="" class="img-fluid" style="height: 4.5em;" id="track-img"></div>
                     <div class="col d-none d-lg-block">
@@ -99,7 +103,7 @@
             <div class="col-4 text-center d-none d-lg-flex align-items-center">
                 <span id="current-time">0:00</span> <input type="range" name="duration" id="seek-slider" min="0" max="100" class="w-100 mx-2" value="0"> <span id="total-duration">0:00</span>
             </div>
-            <div class="col-8 col-lg-4 d-flex align-items-center justify-content-end">
+            <div class="col-auto col-lg-4 d-flex align-items-center justify-content-end">
                 <div class="row row-cols-1 row-cols-lg-2">
                     <div class="col px-2 fw-bold track-name d-lg-none"></div>
                     <div class="col-auto px-2">
@@ -109,7 +113,7 @@
                         <img src="./img/next-icon.svg" alt="next" class="img-fluid" role="button" id="next-btn">
                         <img src="./img/repeat-icon.svg" alt="repeat" class="img-fluid" role="button" id="repeat-btn" style="width: 27px;">
                     </div>
-                    <div class="col-5 d-none d-lg-block">
+                    <div class="col-5 d-none d-md-block">
                         <div class="row align-items-center">
                             <div class="col-2 px-0"><label for="volume"><img src="./img/volume-icon.svg" alt="volume" class="img-fluid" id="volume-icon"></label></div>
                             <div class="col-6 px-0 mx-2 d-flex align-items-center"><input type="range" name="volume" id="volume" min="0" max="100" value="50"></div>
@@ -119,7 +123,12 @@
             </div>
         </div>
     </div>
-    <script src="https://genius.codes"></script>
+    <div class="container-fluid p-0" id="message-container" style="display: none;">
+        <h3 class="d-flex flex-column justify-content-center align-items-center flex-wrap m-3">
+            <span id="icon"><i class="ri-wifi-fill"></i></span>
+            <span id="message"></span>
+        </h3>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./main.js"></script>
 </body>
