--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="row row-cols-3 align-items-center w-100">
             <div class="col-auto col-lg-4">
                 <div class="row">
-                    <div class="col-auto"><img src="" alt="" class="img-fluid" style="height: 4.5em;" id="track-img"></div>
+                    <div class="col-auto"><img alt="track cover" class="img-fluid" style="height: 4.5em;" id="track-img"></div>
                     <div class="col d-none d-lg-block">
                         <div class="row row-cols-1">
                             <div class="col px-0 fw-bold track-name" id="track-name"></div>
@@ -103,7 +103,7 @@
             <div class="col-4 text-center d-none d-lg-flex align-items-center">
                 <span id="current-time">0:00</span> <input type="range" name="duration" id="seek-slider" min="0" max="100" class="w-100 mx-2" value="0"> <span id="total-duration">0:00</span>
             </div>
-            <div class="col-auto col-lg-4 d-flex align-items-center justify-content-end">
+            <div class="col-8 col-lg-4 d-flex align-items-center justify-content-end">
                 <div class="row row-cols-1 row-cols-lg-2">
                     <div class="col px-2 fw-bold track-name d-lg-none"></div>
                     <div class="col-auto px-2">
